--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,10 @@
         </div>
 
         <div id="map-container">
+            <div id="map-container">
             <div id="map"></div>
+            <div id="loader" class="hidden"></div>
+        </div>
             <div id="loader" class="hidden"></div>
         </div>
     </div>
