--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
 
-    <div class="container">
+    <div id="splash-screen">
+        <div class="globe"></div>
+        <div class="waveform">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+    </div>
+
+    <div class="container" style="display: none;">
         <h1>GeoSignal Parser</h1>
 
         <div class="input-section">
@@ -39,10 +50,7 @@
         </div>
 
         <div id="map-container">
-            <div id="map-container">
             <div id="map"></div>
-            <div id="loader" class="hidden"></div>
-        </div>
             <div id="loader" class="hidden"></div>
         </div>
     </div>
