--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     </div>
     </div>
 
-    <div class="container" style="display: none;">
+    <div class="container content-hidden">
         <h1>GeoSignal Parser</h1>
 
         <div class="input-section">
