export to a csv

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,7 @@
 
         <div class="controls">
              <button id="clearBtn">Clear Map</button>
+             <button id="exportCsvBtn">Export as CSV</button>
         </div>
 
         <div class="results-section">
