beep boop home page added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="running-banner" class="hidden">📡 Beep Beep Boop Nothing to see here, just signaling through...</div>
 
     <div id="splash-screen">
         <div class="globe"></div>
@@ -30,7 +31,7 @@
     <div class="container content-hidden">
         <header>
             <nav>
-                <a href="/">Home</a>
+                <a href="/" id="homeLink"> Home </a>
                 <a href="/about">About</a>
                 <a href="/faq">FAQ</a>
             </nav>
