--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="controls">
-             <button id="clearBtn">Clear Map</button>
-             <button id="exportCsvBtn">Export as CSV</button>
+             <button id="clearBtn" title="Wipe it. Wipe it all.">Clear Map</button>
+             <button id="exportCsvBtn" title="Unleash the data!">Export as CSV</button>
         </div>
 
         <div class="results-section">
