--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -53,17 +53,20 @@
             <h2>What is hex data?</h2>
             <p>It's a representation of the binary data from the files. You can copy the content of a file as a hex string and paste it here. Ensure it is not an odd number of Hex Fields</p>
         </div>
-        <div class="How much can I put in?">
+        <div class="faq-item">
             <h2>How much data can I process at once?</h2>
             <p>The application can handle reasonably sized files and hex strings, but performance may degrade with very large inputs Not recommend over 1000 lines of hex fields.</p>
         </div>
-        <div class="What signals are supported?">
+        <div class="faq-item?">
             <h2>What signals are supported?</h2>
             <p>Currently, the application supports XXX formats that include geographical coordinates. More formats may be added in future updates.</p>
         <div class="faq-item">
             <h2>Why do I need a local tile server for the map?</h2>
             <p>To use the application completely offline. The application is configured to look for map tiles locally. You can obtain map tiles from sources like OpenStreetMap and host them with a simple local server.</p>
         </div>
+        <div class="faq-item">
+            <h2>Are there any other features I should be aware of?</h2>
+            <p>Maybe... Konami Code?</p>
         <br>
         <p><a href="/">Back to Parser</a></p>
     </div>
