--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -66,7 +66,7 @@
         </div>
         <div class="faq-item">
             <h2>Are there any other features I should be aware of?</h2>
-            <p>Maybe... Konami Code?</p>
+            <p>Maybe... Konami Code? or Secret word for Invincible?</p>
         <br>
         <p><a href="/">Back to Parser</a></p>
     </div>
