--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="god-mode-text" class="hidden"> God Mode: Wow aren't we knowledgeable in console cheats! </div>
+
     <div id="running-banner" class="hidden">📡 Beep Beep Boop Nothing to see here, just signaling through...</div>
 
     <div id="splash-screen">
