filter layers by signal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,6 +67,12 @@
         <div class="results-section">
             <h2>Results</h2>
             <p><strong>Signal Type(s) Found:</strong> <span id="signalType">N/A</span></p>
+
+            <div id="filter-container" class="hidden">
+                <h3>Filter Layers:</h3>
+                <div id="filter-checkboxes"></div>
+            </div>
+
             <div id="results">No data processed yet.</div>
             <div id="coordinates-list-container">
                 <h3>Coordinates:</h3>
