--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>GeoSignal Parser</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div id="god-mode-text" class="hidden"> God Mode: Wow aren't we knowledgeable in console cheats! </div>
@@ -65,6 +66,23 @@
         </div>
 
         <div class="results-section">
+            <div class="dashboard-section">
+                <div class="dashboard-header" id="dashboardHeader">
+                    <h2>Analytics Dashboard</h2>
+                    <button id="toggleDashboardBtn" title="Collapse Dashboard">Hide</button>
+                </div>
+                <div id="dashboardContent">
+                    <div class="chart-container">
+                        <h3>Signal Type Distribution</h3>
+                        <canvas id="signalTypeChart"></canvas>
+                    </div>
+                    <div class="chart-container">
+                        <h3>Signal Count by Latitude</h3>
+                        <canvas id="latitudeChart"></canvas>
+                    </div>
+                </div>
+            </div>
+
             <h2>Results</h2>
             <p><strong>Signal Type(s) Found:</strong> <span id="signalType">N/A</span></p>
 
